Added conditional rendering of HomePage based on user login status, user stays on the HomePage after logout. Overall Application is working fine!

--- a/LibManageSystem/dataLMS/templates/dataLMS/account.html
+++ b/LibManageSystem/dataLMS/templates/dataLMS/account.html
@@ -9,7 +9,7 @@
 <body>
     <h1>{{ object.username }}</h1>
     <h2>{{ object.email }}</h2>
-    <button><a href="{% url 'logoutView' %}">Log Out</a></button>
+    <button><a href="{% url 'logout' %}">Log Out</a></button>
     <button><a href="{% url 'books' %}">Home</a></button>
     <hr>
     {% if issueStatus != False %}
